tests/invalid/empty.brandejs
x = 5
; empty if clause, do we want to raise en error or nah?
if(x==5){
}